--- a/ht.html
+++ b/ht.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:blue">
+<body style="background-color:red">
 
 <h2> What Can JavaScript Do?</h2>
 <p style="color:red;font-family:verdana">
