--- a/ht.html
+++ b/ht.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:red">
+<body style="background-color:green">
 
 <h2> What Can JavaScript Do?</h2>
 <p style="color:red;font-family:verdana">
@@ -9,7 +9,7 @@ JavaScript can change HTML attribute values.</p>
 
 <p style="color:blue;font-family:verdana">In this case JavaScript changes the value of the src (source) attribute of an image.</p>
 
-<button onclick="document.getElementById('myImage').src='s3.gif'">doraemon walk backword</button>
+<button style="color:blue;font-family:verdana" onclick="document.getElementById('myImage').src='s3.gif'">doraemon walk backword</button>
 
 <img id="myImage" src="download.jpg" style="width:300px">
 
