--- a/ht.html
+++ b/ht.html
@@ -9,7 +9,7 @@ JavaScript can change HTML attribute values.</p>
 
 <p style="color:blue;font-family:verdana">In this case JavaScript changes the value of the src (source) attribute of an image.</p>
 
-<button style="color:blue;font-family:verdana" onclick="document.getElementById('myImage').src='s3.gif'">doraemon walk backword</button>
+<button style="color:blue;font-family:verdana";"background-color:MediumSeaGreen onclick="document.getElementById('myImage').src='s3.gif'">doraemon walk backword</button>
 
 <img id="myImage" src="download.jpg" style="width:300px">
 
