--- a/ht.html
+++ b/ht.html
@@ -13,7 +13,7 @@ JavaScript can change HTML attribute values.</p>
 
 <img id="myImage" src="download.jpg" style="width:300px">
 
-<button onclick="document.getElementById('myImage').src='s1.gif'">doraaemon walk forword</button>
+<button style="color:blue;font-family:verdana";onclick="document.getElementById('myImage').src='s1.gif'">doraaemon walk forword</button>
 
 </body>
 </html>
